0.12007 2016-11-18
    - depend on LWP::Protocol::https instead of Crypt::SSLeay
    - make SSL the default for Net::Twitter::Lite::WithAPIv1_1

0.12006 2014-01-24
    - Added WrapResult: return both the Twitter result and HTTP::Response

0.12005 2014-01-17
    - Twitter now requires SSL connections

0.12004 2013-05-03
    - restore list_subscriptions

0.12003 2013-04-25
    - Added list_ownerships

0.12002 2013-03-11
    - 30 second delay in OAuth requests fixed with Net::HTTP 6.06

0.12001 2013-03-06
    - Fixed tests (Net::OAuth is optional) (closses issue #7)
    - Updated examples to use Twitter API v1.1

0.12000 2013-03-04
    - URI encode POSTDATA to match Twitter's more stringent (non-standard) requirements
    - created Net::Twitter::Lite::WithAPIv1_1 for Twitter API v1.1 support

0.11002 2012-06-27
    - rebuilt from Net::Twitter 3.18003 to fix replies, mentions path

0.11001 2012-05-08
    - CPAN release

0.11000_01 2012-04-24
    - functional parity with Net::Twitter 3.18002
    - Replaced JSON::Any with JSON
    - new lists methods, legacy_lists_api option for back compat
    - update_with_media and other new API methods ported from Net::Twitter

0.10004 2011-03-28
	- ported from Net::Twitter 3.16000
	- fixed: methods requiring HTTP DELETE failed with OAuth
    - doc fix: use verifier in request_access_token call
    - always use SSL for token exchange

0.10003 2010-05-27
    - fixed ssl test: skip_all if Crypt::SSLeay is not available

0.10002 2010-05-27
    - fixed: set correct url to https when ssl is specified RT#57889

0.10001 2010-05-26
    - fixed "plan twice" error in unicode test

0.10000 2010-05-21
    - production release, ported from Net::Twitter 3.13003

0.09002_03 2010-05-13
    - ported from Net::Twitter 3.13002_03
    - handle DELETE HTTP method (for Lists API)

0.09002_02 2010-05-12
    - ported from Net::Twitter 3.13002_02
    - Added Lists API support

0.09001 2010-05-10